fix onion banner on mobile

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -84,12 +84,6 @@ body {
 
     }
 
-    #undercontent {
-        z-index: 0;
-        position: absolute;
-        margin-top: 5vh;
-        font-size: 2vh;
-    }
 
     #header {
         flex-direction: column;
